# ds-in-C

./: README.md
list/: README.md
list/alist/: alist.c  alist.h  test.c
list/llist/: CMakeLists.txt
list/llist/include/: llist.h
list/llist/src/: llist.c
tree/binary tree/: binary_tree.c
tree/expression tree/: expression_tree.c
